# RR-Hummingbot-Software

./: .gitignore  .gitmodules  Lane Detection Readme.md  README.md  base.py  doxygen_config  feature_matching.py
Deprecated_Items_2018/: README.md
Deprecated_Items_2018/competition_launch_files/: circuit_race.launch  drag_race.launch
competition_launch_files/: circuit_race.launch  drag_race.launch  obstacle_avoidance_challenge.launch  urban_road_challenge.launch
notes/: How_to_Install_CUDA_9.0_&_ZED_2.7_for_Ubuntu_LTS_16.04.md  Jetson_configuration.md
python_files/: image_generation.py
rr_2019/: CMakeLists.txt  package.xml
rr_common/: CMakeLists.txt
rr_common/include/: msg_srv_names.hpp  rr_topic_names.hpp
rr_common/rviz/: left_right_stitching.rviz  test_cascade.rviz  test_endline.rviz  test_endline_and_traffic_light.rviz  test_lane_detection.rviz  test_path_planning.rviz  test_traffic_light.rviz  zed_bag.rviz  zed_bag_test.rviz  zed_bag_test_with_occ.rviz
rr_common/scripts/: Lane-Detection-Testing.ipynb  record_bag.sh  test-grayscale-thresholding.py  test-hsv-thresholding.py  test-lane-detection.py  zed_bag.sh  zed_bag_left_right.sh  zed_left_right_bag.sh
rr_computer_vision/: CMakeLists.txt  README.md  package.xml
rr_computer_vision/classifier_dev/: README  arrow_direction.py  cascade_eval.py  check_min_signs.py  feature_matching.py  haar_cascade.xml  image_generator.py  label_data.json  label_generator.py  stage13.xml
rr_computer_vision/config/: circuit_race.yaml  drag_race.yaml  obstacle_avoidance_challenge.yaml  urban_road_challenge.yaml
rr_computer_vision/include/: computer_vision.hpp  endline_detection.hpp  lane_detection.hpp  sign_detection.hpp  thresholding_values.hpp  traffic_light.hpp
rr_computer_vision/launch/: computer_vision.launch  computer_vision_base.launch  computer_vision_zed.launch
rr_computer_vision/msg/: TrafficSign.msg
rr_computer_vision/scripts/: Lane-Detection-Test-Single-Image.ipynb  Lane-Detection-Testing-Directory-Of-Images.py  Traffic-Light-Testing.ipynb  horizontal_lane_detection_test.ipynb
rr_computer_vision/scripts/.ipynb_checkpoints/: horizontal_lane_detection_test-checkpoint.ipynb
rr_computer_vision/src/: computer_vision.cpp  computer_vision_main.cpp  endline_detection.cpp  lane_detection.cpp  sign_detection.cpp  traffic_light.cpp
rr_gazebo/include/: simulated_odom.hpp
rr_gazebo/src/: simulated_odom.cpp
rr_interface/: CMakeLists.txt  package.xml  serial_tests.ino
rr_interface/include/: interface.hpp
rr_interface/launch/: interface.launch
rr_interface/msg/: Transmitter.msg
rr_interface/serial_tests/: serial_tests.ino
rr_interface/src/: interface.cpp  interface_main.cpp
rr_lane_detection/: CMakeLists.txt
rr_lane_detection/include/: lane_detection.hpp
rr_lane_detection/launch/: lane_detection_cam.launch
rr_lane_detection/src/: lane_detection.cpp  lane_detection_main.cpp
rr_mapper/: CMakeLists.txt  package.xml
rr_mapper/config/: rr_mapper.yaml
rr_mapper/include/: laser_mapper.hpp
rr_mapper/launch/: mapper.launch
rr_mapper/src/: laser_mapper.cpp  laser_mapper_main.cpp
rr_path_planner/: CMakeLists.txt  package.xml
rr_path_planner/config/: circuit_race.yaml  drag_race.yaml  obstacle_avoidance_challenge.yaml  urban_road_challenge.yaml
rr_path_planner/include/: path_planner.h
rr_path_planner/launch/: path_planner.launch
rr_path_planner/src/: path_planner.cpp  path_planner_main.cpp
rr_sign_detection/: CMakeLists.txt  package.xml
rr_sign_detection/include/: sign_detection.hpp
rr_sign_detection/launch/: sign_detection.launch
rr_sign_detection/src/: sign_detection.cpp  sign_detection_main.cpp
rr_supervisor/: CMakeLists.txt  README.md  package.xml
rr_supervisor/include/: supervisor.hpp
rr_supervisor/launch/: supervisor.launch
rr_supervisor/src/: supervisor.cpp  supervisor_main.cpp
rr_tf_mapper/: CMakeLists.txt  package.xml
rr_tf_mapper/include/: tf_mapper.h
rr_tf_mapper/launch/: tf_mapper.launch
rr_tf_mapper/src/: tf_mapper.cpp  tf_mapper_main.cpp
rr_third_party_packages/twist_mux/config/: twist_mux_locks.yaml  twist_mux_topics.yaml
rr_traffic_light/: CMakeLists.txt  package.xml
rr_traffic_light/include/: traffic_light.hpp
rr_traffic_light/launch/: traffic_light_camera.launch
rr_traffic_light/src/: traffic_light.cpp  traffic_light_main.cpp
rr_vision/include/: computer_vision.hpp
rr_vision/launch/: computer_vision_base.launch
rr_vision/src/: computer_vision.cpp  lane_detection.cpp  sign_detection.cpp
system_files/: 9-racing_peripherals.rules
