<?xml version="1.0"?>
<package>
  <name>rr_computer_vision</name>
  <version>0.0.0</version>
  <description>The Computer Vision package</description>

  <maintainer email="msmart@todo.todo">msmart</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rr_common</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rr_common</run_depend>

</package>
