<?xml version="1.0"?>
<package>
  <name>rr_supervisor</name>
  <version>0.0.0</version>
  <description>The rr_supervisor package</description>
  <maintainer email="wahmedwd3@gmail.com">w29ahmed</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rr_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rr_common</run_depend>

  <export>
  </export>
</package>
